<resources>
    <string name="app_name">Project2021</string>
    <string name="covid">GO TO COVID 19 APP</string>
    <string name="covidinfo">Please Click the button below to go to the app</string>
    <string name="countryName">Country Name</string>
    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>
    <string name="Submit">SUBMIT</string>
    <string name="Saved">GO TO SAVED COVID 19 LIST</string>
    <string name="title">COVID 19</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="db_success">Database Success - Covid Selection Saved</string>
    <string name="db_failure">database failure </string>
    <string name="Help">Help</string>
    <string name="SavedList">Saved List</string>
    <string name="TicketApp">Ticket App</string>
    <string name="LoginPage"> Covid Login Page</string>
    <string name="RecipeApp">Recipe App</string>
    <string name="MusicApp">Music App</string>
    <string name="Cases">Cases:</string>
    <string name="By">By: Kim Johnson</string>
    <string name="Version">Version 2.1</string>
    <string name="CovidTask">Covid Task</string>
    <string name="SE">Covid 19 Saved List</string>
    <string name="Search">Search</string>

</resources>